# diffusion

./: Makefile  README.md  pyproject.toml  requirements.txt
diffusion/: evaluate.py  trainer.py  visualize.py
diffusion/data/: __init__.py  celebA_hq.py  cifar.py  create_dataset.py  lsun.py  transforms.py
diffusion/models/: __init__.py  autoencoder.py  ddpm.py  github_model.py  layers.py  positional.py  unet.py  vq-vae.py
diffusion/solvers/: __init__.py  build.py  config.py
diffusion/utils/: reproduce.py
scripts/: sample.py  test.py  train.py  train_vae.py
scripts/configs/: sample-cifar10.yaml  train-cifar10-pc-config.yaml  train-cifar10-pc.yaml  train-laptop-config.yaml  train-pc-config.yaml
scripts/configs/ddpm/: train-cifar10-pc.yaml  train-laptop-config.yaml
scripts/configs/ddpm/models/: ddpm.yaml
scripts/configs/ldm/: train_lsun_bedroom.yaml
scripts/configs/ldm/models/autoencoder/: autoencoder_kl_f-4_d-8.yaml
scripts/configs/models/: ddpm.yaml
scripts/configs/models/autoencoder/: autoencoder_kl_f-4_d-8.yaml
scripts/graveyard/: graveyard.py
scripts/tests/: test.py
scripts/visualizations/: explore_coco.py
